--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build website
         run: npm run build
       - name: upload
-        uses: actions/uploa-artifact@3
+        uses: actions/upload-artifact@3
         with:
           name: dist-files
           path: |
