--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,3 +38,9 @@ jobs:
     steps:
       - name: Deploy
         run: echo "Deploying..."
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: output contents
+        run: ls -R
